--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,16 +1,30 @@
 .nav {
   min-height: 10vh;
-  margin: 0 auto;
   display: flex;
-  width: 50%;
   justify-content: space-between;
   align-items: center;
-
-    button {
-      padding: .5rem;
-      background-color: transparent;
-      border: none;
+  button {
+    color: #646464;
+    outline: none;
+    cursor: pointer;
+    padding: 0.5rem;
+    background-color: transparent;
+    border: 2px solid #646464;
+    border-radius: 0.25rem;
+    &:hover {
+      color: #ffffff;
+      border: 2px solid #2977f6;
+      background-color: #2977f6;
     }
-
-
+    &.active {
+      color: #ffffff;
+      border: 2px solid #2977f6;
+      background-color: #2977f6;
+    }
+    span {
+      font-size: 0.75rem;
+      font-family: "Lato";
+      padding-left: 0.5rem;
+    }
+  }
 }
