--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -1,26 +1,29 @@
 .player {
-  min-height: 20vh;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: stretch;
   .time-ctrl {
     display: flex;
-    width: 50%;
     input {
-      flex: 8 0 0;
-      padding: 1rem 0;
+      flex-basis: 80%;
     }
     p {
-      flex: 1 0 0;
+      flex-basis: 10%;
       padding: 1rem;
     }
   }
   .play-ctrl {
-    width: 30%;
+    margin: auto;
     display: flex;
     justify-content: space-between;
+    width: 15rem;
     svg {
       cursor: pointer;
     }
   }
+}
+
+[type=range] {
+  
 }
