--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   img {
-    width: 20%;
+    max-width: 50%;
     border-radius: 50%;
   }
   h2 {
