--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -18,14 +18,6 @@ body {
   font-family: "Lato", sans-serif;
 }
 
-.app {
-  padding-left: 0;
-  transition: all 0.5s ease;
-  &.active {
-    padding-left: 20rem;
-  }
-}
-@import "./song";
-@import "./player";
+
+@import "./music";
 @import "./library";
-@import "./nav";
