--- a/src/styles/_music.scss
+++ b/src/styles/_music.scss
@@ -1,9 +1,8 @@
 .music {
+  margin: auto;
   max-width: 50rem;
-  margin: 0 auto;
   padding-left: 0;
-  width: 50%;
-  transition: all 0.5s ease;
+  transition: all .5s ease;
   &.active {
     width: 80%;
     padding-left: 20rem;
