--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -4,26 +4,61 @@
   flex-direction: column;
   justify-content: stretch;
   .time-ctrl {
+    padding-top: 2rem;
     display: flex;
-    input {
+    align-items: center;
+    text-align: center;
+    .track {
+      overflow: hidden;
       flex-basis: 80%;
+      background: lightblue;
+      height: 1rem;
+      border-radius: 1rem;
+      position: relative;
+      input {
+      cursor: pointer;
+        width: 100%;
+        background: transparent;
+      }
+      .animate-track {
+        width: 100%;
+        height: 100%;
+        background-color: rgb(230, 230, 230);
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translateX(0%);
+        pointer-events: none;
+      }
     }
     p {
+      padding-left: .75rem;
+      padding-right: .75rem;
       flex-basis: 10%;
-      padding: 1rem;
     }
   }
   .play-ctrl {
-    margin: auto;
+    width: 50%;
+    margin:  auto;
+    padding-bottom: 2rem;
     display: flex;
     justify-content: space-between;
-    width: 15rem;
     svg {
       cursor: pointer;
     }
   }
 }
 
-[type=range] {
-  
+input[type=range] {
+  -webkit-appearance: none;
+  &:focus {
+    outline: none;
+  }
 }
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 16px;
+  width: 16px;
+}
+
