--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -2,14 +2,15 @@
   position: fixed;
   left: 0;
   top: 0;
-  width: 20rem;
-  height: 100%;
+  width: 100%;
+  height: 100vh;
   overflow: scroll;
   transform: translateX(-100%);
   transition: all 0.5s ease;
-  box-shadow: 2px 2px 50px rgb(221,221,221);
+  background-color: rgb(255, 255, 255);
   &.active {
   transform: translateX(0);
+  box-shadow: 2px 2px 50px rgb(221,221,221);
   }
   h2 {
     padding: 2rem;
@@ -24,9 +25,6 @@
         border-radius: .25rem;
         width: 25%;
       }
-      &:hover {
-        background-color: rgb(222,222,255);
-      };
       &.active {
         background-color: violet;
       }
@@ -45,7 +43,11 @@
 
   }
 }
-
+@media (min-width: 768px) {
+  .library {
+    width: 20rem;
+  }
+}
 /* The emerging W3C standard
    that is currently Firefox-only */
    * {
