--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,5 +1,6 @@
 .nav {
   min-height: 10vh;
+  min-height: calc(var(--vh, 1vh) * 10);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -11,12 +12,8 @@
     background-color: transparent;
     border: 2px solid #646464;
     border-radius: 0.25rem;
-    &:hover {
-      color: #ffffff;
-      border: 2px solid #2977f6;
-      background-color: #2977f6;
-    }
     &.active {
+      z-index: 10;
       color: #ffffff;
       border: 2px solid #2977f6;
       background-color: #2977f6;
