--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -1,5 +1,6 @@
 .player {
   min-height: 30vh;
+  min-height: calc(var(--vh, 1vh) * 30);
   display: flex;
   flex-direction: column;
   justify-content: stretch;
@@ -11,7 +12,6 @@
     .track {
       overflow: hidden;
       flex-basis: 80%;
-      background: lightblue;
       height: 1rem;
       border-radius: 1rem;
       position: relative;
@@ -60,5 +60,16 @@ input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   height: 16px;
   width: 16px;
+  &::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 5px;
+  }
+  
 }
+input[type=range]::-moz-range-thumb {
+  -webkit-appearance: none;
+  background: transparent;
+  border: 0;
+}
+
 
